# spotax

./: CLAUDE.md  README.md  pyproject.toml  spotax_utils.py  spotjax_utils.py
examples/imagenet_efficientnet/: README.md  convert_to_arrayrecord_local.py  data.py  requirements.txt  spotax_setup.sh  spotax_utils.py  train.py
examples/maxtext_qwen3_sft/: README.md  config.py  spotax_setup.sh  train.py
examples/simple_math_sft/: README.md  data.py  requirements.txt  spotax_setup.sh  spotax_utils.py  train.py
patches/: __init__.py  apply_bonsai_patch.sh  bonsai_monkey_patch.py  bonsai_reshard_fix.patch
src/spotax/: __init__.py  __main__.py  config.py  main.py  orchestrator.py  setup.py  watchdog.py
src/spotax/infra/: __init__.py  gcp.py  ssh.py  storage.py
src/spotax/utils/: __init__.py  logging.py
src/spotjax/: __main__.py  config.py  main.py  orchestrator.py  scaffold.py  setup.py  watchdog.py
src/spotjax/infra/: __init__.py  gcp.py  ssh.py  storage.py
src/spotjax/templates/: spotjax_utils.py.j2
src/spotjax/utils/: __init__.py  logging.py
tests/: __init__.py  test_config.py  test_orchestrator.py  test_scaffold.py  test_setup.py  test_storage.py  test_watchdog.py
